# secure-vlr

./: README.md
ISS-VLR/: README.md  active.sh  main.py  passive1.sh  passive2.sh  requirements.txt  utils.py
ISS-VLR/communication/: Channel.py
ISS-VLR/config/: config_active.json  config_passive1.json  config_passive2.json
ISS-VLR/data/: preprocessing.py
ISS-VLR/logger/: Logger.py
ISS-VLR/protocols/: BaseClient.py  ISSVLR.py
PS-VLR/: CMakeLists.txt  README.md  network_4.txt  test.cpp
PS-VLR/data/chess/: client_0.txt  client_1.txt  client_2.txt
PS-VLR/src/client/: client.cpp  client.h  client.hpp
PS-VLR/src/config/: config.cpp  config.h
PS-VLR/src/datatypes/: Z2k.h  Z2k.hpp  Zp.h  Zp.hpp  concepts.h  eigen.h  fixed_point.h  fixed_point.hpp  math.h  math.hpp  mpx2k.cpp  mpx2k.h  mpx2k.hpp  mpxp.h  mpxp.hpp
PS-VLR/src/include/: common.h
PS-VLR/src/models/: psvlr.cpp  psvlr.h
PS-VLR/src/mpc/: random_generator.cpp  random_generator.h
PS-VLR/src/mpc/fsemi2k/: fsemi2k_context.h  fsemi2k_context.hpp  fsemi2k_sharing.h
PS-VLR/src/mpc/semi2k/: semi2k_context.h  semi2k_context.hpp  semi2k_sharing.h  semi2k_sharing.hpp
PS-VLR/src/network/: bitrate.h  bitrate.hpp  comm_package.cpp  comm_package.h  comm_package.hpp  futures.h  mp_connect.cpp  mp_connect.h  mp_connect.hpp  multi_party_player.cpp  multi_party_player.h  multi_party_player.hpp  playerid.cpp  playerid.h  socket_package.h  statistics.h  two_party_player.h
PS-VLR/src/serialization/: concepts.h  deserializer.h  deserializer_impl.h  exceptions.h  serializer.h  serializer_impl.h  stl.h
PS-VLR/src/tools/: bit_reference.h  bit_vector.cpp  bit_vector.h  bit_vector.hpp  byte_vector.cpp  byte_vector.h  byte_vector_v1.cpp  byte_vector_v1.h  byte_vector_v2.cpp  byte_vector_v2.h  expr_template.h  math.h  permutation.cpp  permutation.hpp  raw_vector.h  raw_vector.hpp  timer.h
PS-VLR/src/utils/: hexl_utils.h  utils.h
